--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container-fluid">
-<a href="http://i-ac.eu/fr/RDV-satellites_2018/188_quelque-chose-rouge" target="_blank"><img class="img-responsive" src="quelque-chose-rouge.jpg"></a>
+<a href="http://i-ac.eu/fr/RDV-satellites_2018/188_quelque-chose-rouge" target="_blank"><img class="img-responsive" src="quelque-chose-rouge.jpg" alt="Quelque-chose Rouge"></a>
 <a href="http://i-ac.eu/fr/RDV-satellites_2018/188_quelque-chose-rouge" target="_blank"><h1><strong>« Quelque-chose Rouge »</strong></h1>
 
   <h2>IAC Villeurbanne / France</h2>
